<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.projectgalen.lib</groupId>
    <artifactId>PGUI</artifactId>
    <version>1.0.0</version>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <intellij.version>232.8660.185</intellij.version>
        <intellij.annotations.version>24.0.1</intellij.annotations.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <github.global.server>github</github.global.server>
        <github.owner>GalenRhodes</github.owner>
        <github.mvn.repo>maven-repo</github.mvn.repo>
        <project.build.module.src.dir>${project.basedir}/src/main</project.build.module.src.dir>
        <project.build.resources.dir>${project.build.module.src.dir}/resources</project.build.resources.dir>
        <project.build.metainf.dir>${project.build.module.src.dir}/META-INF</project.build.metainf.dir>
        <project.build.jarclasses.dir>${project.build.directory}/jars-classes</project.build.jarclasses.dir>
        <app.base.path>com/projectgalen/lib/ui</app.base.path>
        <app.base.package>com.projectgalen.lib.ui</app.base.package>
        <props2xml.jar.path>${project.basedir}/utils/PropertiesToXML-1.0.0.jar</props2xml.jar.path>
    </properties>

    <name>Project Galen Base Utilities</name>
    <description>${project.name}</description>
    <url>https://github.com/${github.owner}/${project.artifactId}</url>

    <developers>
        <developer>
            <id>g.rhodes</id>
            <name>Galen Rhodes</name>
            <email>galenrhodes@me.com</email>
        </developer>
    </developers>

    <repositories>
        <repository>
            <id>${github.owner}</id>
            <url>https://github.com/${github.owner}/${github.mvn.repo}/raw/main/</url>
        </repository>
        <repository>
            <id>central</id>
            <url>https://repo1.maven.org/maven2/</url>
        </repository>
        <repository>
            <id>jetbrains.releases</id>
            <url>https://www.jetbrains.com/intellij-repository/releases</url>
        </repository>
        <repository>
            <id>jetbrains.3rdparty</id>
            <url>https://cache-redirector.jetbrains.com/intellij-dependencies</url>
        </repository>
    </repositories>

    <pluginRepositories>
        <pluginRepository>
            <id>central</id>
            <url>https://repo1.maven.org/maven2/</url>
        </pluginRepository>
    </pluginRepositories>

    <distributionManagement>
        <repository>
            <id>internal.repo</id>
            <name>Temporary Staging Repository</name>
            <url>file://${project.build.directory}/mvn-artifact</url>
        </repository>
    </distributionManagement>

    <scm>
        <url>https://github.com/${github.owner}/${project.artifactId}</url>
        <developerConnection>scm:git:git@github.com:${github.owner}/${project.artifactId}.git</developerConnection>
        <connection>scm:git:https://github.com/${github.owner}/${project.artifactId}.git</connection>
    </scm>

    <dependencies>
        <dependency>
            <groupId>com.projectgalen.lib</groupId>
            <artifactId>PGUtils</artifactId>
            <version>1.0.0</version>
        </dependency>

        <dependency>
            <groupId>com.formdev</groupId>
            <artifactId>flatlaf</artifactId>
            <version>3.1.1</version>
        </dependency>

        <dependency>
            <groupId>com.formdev</groupId>
            <artifactId>flatlaf-extras</artifactId>
            <version>3.1.1</version>
        </dependency>
    </dependencies>

    <packaging>jar</packaging>

    <build>
        <defaultGoal>package</defaultGoal>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.3.0</version>
                <executions>
                    <execution>
                        <id>test-jar</id>
                        <phase>package</phase>
                        <goals>
                            <goal>test-jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.3.0</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                        <phase>package</phase>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-antrun-plugin</artifactId>
                <version>3.1.0</version>
                <executions>
                    <execution>
                        <id>1</id>
                        <phase>compile</phase>
                        <configuration>
                            <target>
                                <taskdef name="javac2" classpathref="maven.runtime.classpath" classname="com.intellij.ant.Javac2"/>
                                <javac2 srcdir="${project.build.module.src.dir}/java" destdir="${project.build.outputDirectory}" classpathref="maven.compile.classpath" includeantruntime="true"/>
                            </target>
                        </configuration>
                        <goals>
                            <goal>run</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>3.3.1</version>
                <executions>
                    <execution>
                        <id>copy-gui-forms</id>
                        <phase>compile</phase>
                        <goals>
                            <goal>copy-resources</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${project.build.outputDirectory}</outputDirectory>
                            <resources>
                                <resource>
                                    <directory>${project.build.module.src.dir}/java</directory>
                                    <includes>
                                        <include>**/*.form</include>
                                    </includes>
                                </resource>
                            </resources>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-deploy-plugin</artifactId>
                <version>3.0.0</version>
                <configuration>
                    <altDeploymentRepository>
                        internal.repo::file://${project.build.directory}/mvn-artifact
                    </altDeploymentRepository>
                </configuration>
            </plugin>

            <plugin>
                <groupId>com.github.github</groupId>
                <artifactId>site-maven-plugin</artifactId>
                <version>0.12</version>
                <configuration>
                    <message>Maven artifacts for ${project.artifactId}-${project.version}</message>
                    <outputDirectory>${project.build.directory}/mvn-artifact</outputDirectory>
                    <noJekyll>true</noJekyll>
                    <merge>true</merge>
                    <branch>refs/heads/main</branch>
                    <repositoryName>${github.mvn.repo}</repositoryName>
                    <repositoryOwner>${github.owner}</repositoryOwner>
                    <server>${github.global.server}</server>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>site</goal>
                        </goals>
                        <phase>site</phase>
                        <!-- <phase>deploy</phase>-->
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>
